# contrib-extras

./: .gitignore  404.html  CNAME  Dockerfile  Dual_5015_Fan_Connector.stl  Dual_5015_Fan_Connector.stp  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: contribution-submission.md
.github/workflows/: check-build.yml  documentation.yml
accelerometer_mounts/adxl345_shroud/: index.html
accelerometer_mounts/assets/: adxl345_shroud.STEP
accelerometer_mounts/bmg_top_motor/: index.html
cable_chain/assets/: dual_5015_part_fan_cable_chain.stp  xy_cable_chain_back_adxl_opt.stp  xy_cable_chain_extruder_mount_std.stp  xy_cable_chain_stepper_slider.stp  xy_cable_chain_xy_joiner_hood.stp
cable_chain/dual_5015_part_fan_cable_chain/: index.html
cable_chain/stl/: dual_5015_part_fan_cable_chain.stl  tancuder_10x20_cable_chain_2020_frame_anchor.stl  tancuder_10x20_cable_chain_eva_mount.stl  xy_cable_chain_back_adxl_opt.stl  xy_cable_chain_extruder_mount.stl
cable_chain/tancuder_10x20_cable_chain/: index.html
cable_chain/xy_cable_chain_mod/: index.html
cooling/7530_part_fan/: index.html
cooling/7530_part_fan_remix/: index.html
cooling/assets/: 7530_back_corexy.step  7530_part_fan_remix.step  dual_5015_part_fan_core_xy_back.stp
cooling/dual_5015_part_fan/: index.html
docs/: .pages  Equerre d'assemblage 279mm.stl  index.md  manual.md
docs/Duet 1LC/: Duet 1 LC.md
eva_contrib_builder/: plugin.py  schemas.py
overrides/: easy_page.html
search/: search_index.json
(+226 files in other folders)
