[tool.poetry]
name = "contrib-extras"
version = "0.1.0"
description = ""
authors = ["Paweł Kucmus <pkucmus@gmail.com>", "Mikkel Schmidt <mikkel.schmidt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
mkdocs-material = "^6.2.7"
mkdocs-minify-plugin = "^0.4.0"
mkdocs-awesome-pages-plugin = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
